--- a/src/components/pictureGallery/arrowButton/ArrowButton.module.css
+++ b/src/components/pictureGallery/arrowButton/ArrowButton.module.css
@@ -8,6 +8,7 @@
   aspect-ratio: 1;
   min-block-size: 2.5rem;
   min-inline-size: 2.5rem;
+  pointer-events: all;
 
   & svg {
     color: var(--grey-950);
